<resources>
    <string name="app_name">AndroidModbus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="save_file_test">Create a Random File</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="call_api">Call API</string>
    <string name="read_sqlite">Read SQLite</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>